# IM-rainbow-scratch

./: CMakeLists.txt  README  README.md  TODO  app.cc  app.hh  chat_server.cc  configure.cc  configure.hh  connectionfd_manager.hh  global.hh  mutex.hh  notification_manager.hh  packet_manager.cc  packet_manager.hh  protocol.cc  protocol.hh  protocol.js  rainbowserver.cc  server_app.cc  server_app.hh  server_core.cc  server_core.hh  session_manager.cc  session_manager.hh  singleton.hh  test_app_user_manager.cc  test_time.cc  time_stamp.hh  trie_tree.hh  user_data.cc  user_data.hh  user_manager.cc  user_manager.hh  utils.cc  utils.hh  working_context.hh
cli/: CMakeLists.txt  chat_gui.cc  chat_gui.hh  global.cc  global.hh  gui.cc  gui.hh  log.cc  rainbow.cc  rainbow_app.cc  rainbow_app.hh  rainbow_client.cc  rainbow_client.hh  rainbow_data.cc  rainbow_data.hh  rainbow_global.cc  rainbow_global.hh  rainbow_gui.cc  rainbow_gui.hh  register_app.cc  register_app.hh  register_client.cc  register_client.hh  register_global.cc  register_global.hh  register_gui.cc  register_gui.hh  test_chat_gui.cc  test_gui.cc  test_rainbow_gui.cc  test_register_application.cc  utils.cc  utils.hh
